--- a/index.html
+++ b/index.html
@@ -27,25 +27,16 @@
 
 		<!-- Header -->
 			<header id="header" class="alt skel-layers-fixed">
-				<h1><a href="index.html">HTML5 Website <span>by Html5webtemplates.co.uk</span></a></h1>
+				<h1><a href="index.html">ThoughtWorks<span> thoughtworks.com</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Machine Ethicists</a></li>
 						<li>
-							<a href="" class="icon fa-angle-down">Layouts</a>
+							<a href="" class="icon fa-angle-down">More information </a>
 							<ul>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
-								<li>
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
-									</ul>
-								</li>
+								<li><a href="events.html">Events</a></li>
+								<li><a href="blog_posts.html">Blog posts</a></li>
+								<li><a href="get_involved.html">Get Involved</a></li>
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
@@ -56,22 +47,22 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h2>Magna Aliquam</h2>
-					<p>Sed lorem ipsum sed dolor nullam adipiscing</p>
+					<h2>Machine Ethicists</h2>
+					<p>A working group in collaboration with ThoughtWorks</p>
 					<ul class="actions">
 						<li><a href="#one" class="button big scrolly">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- One - Machine Ethicists centre page  -->
 			<section id="one" class="wrapper style1">
 				<div class="container">
 					<header class="major">
-						<h2>Lorem ipsum dolor</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing adipiscing in tempor placerat<br />
-						sed amet accumsan enim lorem sem turpis ut. Massa amet erat accumsan curae<br />
-						blandit porttitor faucibus in nisl nisi volutpat massa mi non nascetur.</p>
+						<h2>Machine Ethics</h2>
+						<p>Machine ethics (or machine morality, computational morality,<br />
+						or computational ethics) is a part of the ethics of artificial intelligence<br />
+						concerned with the moral behavior of artificially intelligent beings.</p>
 					</header>
 					<div class="slider">
 						<span class="nav-previous"></span>
@@ -92,14 +83,14 @@
 					</div>
 				</div>
 			</section>
-			
+
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<div class="container">
 					<div class="row uniform">
 						<div class="4u 6u(2) 12u$(3)">
 							<section class="feature fa-briefcase">
-								<h3>Natoque phasellus</h3>
+								<h3>Really interesting event information</h3>
 								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
 							</section>
 						</div>
@@ -136,7 +127,7 @@
 					</div>
 				</div>
 			</section>
-			
+
 		<!-- Three -->
 			<section id="three" class="wrapper style1">
 				<div class="container">
@@ -210,7 +201,7 @@
 					</div>
 				</div>
 			</section>
-			
+
 		<!-- CTA -->
 			<section id="cta" class="wrapper style3">
 				<h2>Sed faucibus et consequat</h2>
@@ -218,7 +209,7 @@
 					<li><a href="#" class="button big">Get Started</a></li>
 				</ul>
 			</section>
-			
+
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
