--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -27,25 +27,16 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-			<h1><a href="index.html">HTML5 Website <span>by Html5webtemplates.co.uk</span></a></h1>	
+			<h1><a href="index.html">HTML5 Website <span>by Html5webtemplates.co.uk</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="" class="icon fa-angle-down">Layouts</a>
+							<a href="" class="icon fa-angle-down">More information </a>
 							<ul>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
-								<li>
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
-									</ul>
-								</li>
+								<li><a href="events.html">Events</a></li>
+								<li><a href="blog_posts.html">Blog posts</a></li>
+								<li><a href="get_involved.html">Get Involved</a></li>
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
@@ -56,11 +47,11 @@
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
-					<h2>No Sidebar</h2>
-					<p>Faucibus neque adipiscing mi lorem semper blandit</p>
+					<h2>Get Involved</h2>
+					<p>We would love to invite more people to get involved in this project!</p>
 				</header>
 				<div class="container">
-						
+
 					<!-- Content -->
 						<section id="content">
 							<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
@@ -76,10 +67,10 @@
 								<li>Lacinia mattis arcu nascetur lobortis.</li>
 							</ul>
 						</section>
-								
+
 				</div>
 			</section>
-			
+
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
@@ -96,7 +87,7 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 				<span class="copyright">
-			&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>	
+			&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
 				</span>
 			</footer>
 
