Completes first restyle of site

--- a/events.html
+++ b/events.html
@@ -58,14 +58,12 @@
 							<!-- Content -->
 								<section id="content">
 									<a href="#" class="image fit"><img src="images/hack-brexit.jpg" alt="" /></a>
-									<h3>Monthly lean coffee event</h3>
-									<h4>London, every Wednesday</h4>
-									<p>Your chance to discuss different key topics each week.</p>
+									<h3>Monthly lean coffee event, London, every Wednesday fortnight</h3>
+									<p>Meet with a group of interesting technical and non-technical folk to discuss a broad range of different key topics related to Machine Ethics.</p>
 									<li><a href="https://www.meetup.com/">Signup to join us at our next meetup</a></li>
 									<br>
-									<h3>Future of Machine Ethics</h3>
-									<h4>September 2nd 2017</h4>
-									<p>Autumn event on machine ethics hosted by ThoughtWorks.</p>
+									<h3>Future of Machine Ethics, London, Saturday 2nd September 2017</h3>
+									<p>Headline Autumn event on machine ethics hosted by ThoughtWorks.</p>
 									<li><a href="https://www.thoughtworks.com">Signup to join us at our next event</a></li>
 								</section>
 
@@ -79,7 +77,6 @@
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="#" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 				</ul>
 			</footer>
