--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 						<div class="viewer">
 							<div class="reel">
 								<div class="slide">
-									<img src="images/slide01.jpg" alt="" />
+									<img src="images/ai.jpg" alt="" />
 								</div>
 								<div class="slide">
-									<img src="images/slide02.jpg" alt="" />
+									<img src="images/mind.jpg" alt="" />
 								</div>
 								<div class="slide">
-									<img src="images/slide03.jpg" alt="" />
+									<img src="images/head.jpg" alt="" />
 								</div>
 							</div>
 						</div>
@@ -92,21 +92,21 @@
 					<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/neural2.jpg" alt="" /></a>
 								<h3>Algorithims</h3>
 								<p>Bias in algorithims.</p>
 							</article>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/software.jpg" alt="" /></a>
 								<h3>Data</h3>
 								<p>Ownership over data.</p>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/future-work.jpg" alt="" /></a>
 								<h3>Machine learning</h3>
 								<p>Rubbish spews rubbish.</p>
 							</article>
@@ -117,18 +117,22 @@
 
 		<!-- CTA -->
 			<section id="cta" class="wrapper style3">
-				<h2>Curious to learn more?</h2>
 				<ul class="actions">
-					<li><a href="#" class="button big">Sign up to mailing list</a></li>
+					<a href="#" class="default button">Join our mailing list</a>
+					<form method="POST" action="http://formspree.io/YOUREMAILHERE">
+						<input type="email" name="email" placeholder="Your email">
+						<button type="submit">Send</a></button>
+					</form>
+					<li></li>
 				</ul>
 			</section>
+</form>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="#" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 				</ul>
 			</footer>
