--- a/blog_posts.html
+++ b/blog_posts.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-		<h1><a href="index.html">HTML5 Website <span>by Html5webtemplates.co.uk</span></a></h1>
+				<h1><a href="index.html">ThoughtWorks<span> thoughtworks.com</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -39,7 +39,6 @@
 								<li><a href="get_involved.html">Get Involved</a></li>
 							</ul>
 						</li>
-						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -48,7 +47,7 @@
 			<section id="main" class="wrapper style1">
 				<header class="major">
 					<h2>Blog posts</h2>
-					<p>Faucibus neque adipiscing mi lorem semper blandit</p>
+					<p>We have some amazing blog posts about Machine Ethics here!</p>
 				</header>
 				<div class="container">
 					<div class="row 150%">
@@ -56,47 +55,16 @@
 
 							<!-- Content -->
 								<section id="content">
-									<a href="#" class="image fit"><img src="images/slide03.jpg" alt="" /></a>
-									<h3>Dolore Amet Consequat</h3>
-									<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-									<h3>Sed Magna Ornare</h3>
-									<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-									<ul>
-										<li>Faucibus orci lobortis ac adipiscing integer.</li>
-										<li>Col accumsan arcu mi aliquet placerat.</li>
-										<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-										<li>Blandit massa non blandit tempor interdum.</li>
-										<li>Lacinia mattis arcu nascetur lobortis.</li>
-									</ul>
+									<a href="#" class="image fit"><img src="images/blog.jpg" alt="" /></a>
+									<h3>Algorithms</h3>
+									<li><p><a href="https://www.wsj.com/articles/algorithms-arent-biased-but-the-people-who-write-them-may-be-1476466555">Algorithms aren't biased but the people who write them may be</a></p></li>
+									<h3>Data privacy</h3>
+									<li><p><a href="https://ico.org.uk/for-organisations/data-protection-reform/overview-of-the-gdpr/">Overview of the General Data Protection Regulation (GDPR)</a></p></li>
+									<h3>The Future of Work</h3>
+									<li><p><a href="http://www.pwc.co.uk/services/human-resource-services/insights/the-future-of-work-a-journey-to-2022.html">The Future of Work</a></p></li>
 								</section>
-
 						</div>
 						<div class="4u 12u$(2)">
-
-							<!-- Sidebar -->
-								<section id="sidebar">
-									<section>
-										<h3>Magna Feugiat</h3>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="#" class="button small alt">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-									<hr />
-									<section>
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<h3>Amet Lorem Tempus</h3>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="#" class="button small alt">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-								</section>
-
 						</div>
 					</div>
 				</div>
@@ -107,20 +75,7 @@
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 					<li><a href="#" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 				</ul>
-				<ul class="menu">
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Terms of Use</a></li>
-					<li><a href="#">Privacy</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-				<span class="copyright">
-						&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
-				</span>
-			</footer>
-
 	</body>
 </html>
