Updates formatting on lists for get involved page

--- a/get_involved.html
+++ b/get_involved.html
@@ -55,13 +55,15 @@
 						<section id="content">
 							<a href="#" class="image fit"><img src="images/Community_title.jpg" alt="" /></a>
 							<h3>Machine Ethics Working Group</h3>
-							<li><p>Join us on slack for our working group <a href="slack.com">here.</a></p></li>
+							<li>Join us on slack for our working group <a href="slack.com">here.</a></li>
+							<br>
 							<h3>Community blog</h3>
-							<li><p>Contribute to our blog <a href="blog_posts.html">here.</a></p></li>
+							<li>Contribute to our blog <a href="blog_posts.html">here.</a></li>
+							<br>
 							<h3>Propose a topic</h3>
-							<li><p>Propose a topic for us to explore in our working group <a href="blog_posts.html">here.</a></p></li>
+							<li>Propose a topic for us to explore in our working group <a href="blog_posts.html">here.</a></li>
 						</section>
-						
+
 				</div>
 			</section>
 
